--- a/booker/catalog/templates/home.html
+++ b/booker/catalog/templates/home.html
@@ -16,6 +16,7 @@
           </form>
           <td> <br> </td>
       </header>
+      <a href="{% url 'add_book' %}" class="btn btn-primary">Add New Book</a>
         <table>
           {% for book in books %}
           <tr>
